préparation pour la mise en ligne

--- a/GSAP-Bonus/package.json
+++ b/GSAP-Bonus/package.json
@@ -1,5 +1,6 @@
 {
   "name": "package",
+  "homepage": " https://Jason-BDEB.github.io/Travail-Bonus-10-JKT-2.0/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
