--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
-  "dependencies": {
-    "gsap": "^3.14.2"
+  "name": "package",
+  "homepage": " https://Jason-BDEB.github.io/Travail-Bonus-10-JKT-2.0/",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "devDependencies": {
+    "vite": "^7.2.4"
   }
 }
