return to normal

--- a/package.json
+++ b/package.json
@@ -1,15 +1,5 @@
 {
-  "name": "package",
-  "homepage": " https://Jason-BDEB.github.io/Travail-Bonus-10-JKT-2.0/",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "vite": "^7.2.4"
+  "dependencies": {
+    "gsap": "^3.14.2"
   }
 }
